syntax = "proto3";

package com.road.yishi.proto.battle;

message SealOrderMsg {
  repeated int32 sealOrder = 1;
}
